# adf_make

./: .clang-format  .gitignore  CMakeLists.txt  adf_lib.c  adf_lib.h  arguments.c  arguments.h  list_files.c  list_files.h  main.c  make_adf.c  make_adf.h
.github/workflows/: build.yml
adflib/: CHANGES  Makefile  README  adflib.dsw  dynlib.dsp  dynunadf.dsp  staticlib.dsp  staticunadf.dsp
adflib/Demo/: Makefile  Makefile.bak  unadf.c  unadf.output  unadf.usage
adflib/Docs/: API.txt  api_env.html  api_index.html
adflib/Faq/: adf_info.html  adf_info.txt
adflib/Lib/: Makefile  Makefile.bak  adf_bitm.c  adf_bitm.h  adf_blk.h  adf_cache.c  adf_cache.h  adf_defs.h  adf_dir.c  adf_dir.h  adf_disk.c  adf_disk.h  adf_dump.c  adf_dump.h  adf_env.c  adf_err.h  adf_file.c  adf_file.h  adf_hd.c  adf_hd.h  adf_raw.c  adf_str.h  adf_util.c  adf_util.h  adflib.h  defendian.h  prefix.h
adflib/Lib/Generic/: adf_nativ.c  adf_nativ.h
adflib/Lib/Win32/: adf_nativ.c  adf_nativ.h
google_tests/: CMakeLists.txt  adf_tests.cc  arguments_tests.cc  filelist_tests.cc  make_adf_tests.cc  mock_adf_lib.cc  mock_adf_lib.h
